fix(styles): various layout and z-index fixes

--- a/src/features/posts/ui/Post/Post.scss
+++ b/src/features/posts/ui/Post/Post.scss
@@ -20,7 +20,7 @@
     border: none;
     cursor: pointer;
     font-size: 16px;
-    z-index: 10;
+    z-index: 1;
     & img {
       width: 24px;
       height: 24px;
@@ -122,7 +122,7 @@
     border: none;
     cursor: pointer;
     font-size: 16px;
-    z-index: 5;
+
 
   }
 }
