--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -78,6 +78,7 @@ $grey-darker: #BEB9B4;
   --share-link-bg: #F6F6F6;
   --share-link-border: none;
   --share-link-color: #212121;
+  --burger-color: #686868;
 
 
 
@@ -141,6 +142,7 @@ $grey-darker: #BEB9B4;
   --share-link-bg: #303030;
   --share-link-border: 1px solid #686868;
   --share-link-color: #F6F6F6;
+  --burger-color: #ffffff;
 
 
 
