--- a/src/shared/ui/SelectDropdown/SelectDropdown.scss
+++ b/src/shared/ui/SelectDropdown/SelectDropdown.scss
@@ -64,7 +64,7 @@
     height: 46px;
     width: 100vw;
     max-width: 743px;
-    margin: 20px;
+    margin: 12px 20px;
     border-radius: 8px;
 
   }
