--- a/src/widgets/Header/ui/ DropdownProfile/DropdownProfile.scss
+++ b/src/widgets/Header/ui/ DropdownProfile/DropdownProfile.scss
@@ -54,7 +54,7 @@
     background: var(--select-btn-color);
     border-radius: 8px;
     padding: 0;
-    z-index: 10;
+    z-index: 10000;
 
     &-item {
       border-radius: 8px;
