--- a/src/widgets/HomeContent/HomeContent.scss
+++ b/src/widgets/HomeContent/HomeContent.scss
@@ -26,6 +26,9 @@
        width: 99vw;
        padding: 16px;
        gap: 8px;
+       &__postlist {
+         margin-top: 5px;
+       }
      }
    }
 }
